--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
         "typescript": "^5.2.2"
     },
     "dependencies": {
+        "cli-color": "^2.0.3",
         "fs": "^0.0.1-security",
         "path": "^0.12.7"
     }
