--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
         "typescript": "^5.2.2"
     },
     "dependencies": {
+        "@types/cli-color": "^2.0.5",
         "cli-color": "^2.0.3",
         "fs": "^0.0.1-security",
         "path": "^0.12.7"
