--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "ic4d",
-    "version": "1.3.0-alpha.5",
+    "version": "2.0.0",
     "description": "Discord.js Interaction and Command handler 4 Dummies",
     "main": "dist/index.js",
     "types": "dist/index.d.ts",
@@ -24,10 +24,11 @@
         "events",
         "event",
         "commands",
-	"buttons",
-	"select",
-	"menus",
-	"context",
+        "slash",
+        "buttons",
+        "select",
+        "menus",
+        "context",
         "v14",
         "discord-bot",
         "ic4d"
@@ -40,7 +41,7 @@
     "homepage": "https://github.com/YetNT/ic4d#readme",
     "devDependencies": {
         "@types/node": "^20.8.5",
-        "discord.js": "^14.13.0",
+        "discord.js": "^14.14.1",
         "typescript": "^5.2.2"
     },
     "dependencies": {
