--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     ],
     "scripts": {
         "test": "mocha src/index.test.js",
-        "build": "npx tsc"
+        "build": "npx tsc",
+        "deps": "npm i"
     },
     "repository": {
         "type": "git",
