--- a/.github/workflows/release-package.yml
+++ b/.github/workflows/release-package.yml
@@ -1,33 +1,47 @@
-name: Node.js Package
+name: Publish to GitHub Packages
 
 on:
     release:
-        types: [created]
+        types: [created] # Trigger only on new releases.
 
 jobs:
     build:
         runs-on: ubuntu-latest
         steps:
-            - uses: actions/checkout@v4
-            - uses: actions/setup-node@v4
+            - name: Checkout repository
+              uses: actions/checkout@v4
+
+            - name: Setup Node.js
+              uses: actions/setup-node@v4
               with:
-                  node-version: 16
-            - run: npm ci
-            - run: npm test
+                  node-version: "16"
+
+            - name: Install dependencies
+              run: npm ci # Install your dependencies
+
+            - name: Build package
+              run: npm run build # Build your package if necessary (optional step)
 
     publish-gpr:
         needs: build
         runs-on: ubuntu-latest
         permissions:
-            packages: write
-            contents: read
+            packages: write # Permission to publish to GitHub Packages
+            contents: read # Permission to read from repository
         steps:
-            - uses: actions/checkout@v4
-            - uses: actions/setup-node@v4
+            - name: Checkout repository
+              uses: actions/checkout@v4
+
+            - name: Setup Node.js
+              uses: actions/setup-node@v4
               with:
-                  node-version: 16
-                  registry-url: https://npm.pkg.github.com/
-            - run: npm ci
-            - run: npm publish
+                  node-version: "16"
+                  registry-url: https://npm.pkg.github.com/ # Set GitHub Packages registry
+
+            - name: Install dependencies
+              run: npm ci
+
+            - name: Publish to GitHub Packages
+              run: npm publish --access public # Publish to GitHub Packages (Scoped)
               env:
-                  NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+                  NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }} # Authenticate with GitHub token
