--- a/package.json
+++ b/package.json
@@ -16,6 +16,9 @@
         "type": "git",
         "url": "git+https://github.com/YetNT/ic4d.git"
     },
+    "publishConfig": {
+        "@YetNT:registry": "https://npm.pkg.github.com"
+    },
     "keywords": [
         "bot",
         "discord",
