--- a/.github/workflows/release-package.yml
+++ b/.github/workflows/release-package.yml
@@ -1,47 +1,43 @@
-name: Publish to GitHub Packages
+name: Node.js Package
 
 on:
     release:
-        types: [created] # Trigger only on new releases.
+        types: [created]
 
 jobs:
-    build:
+    init:
         runs-on: ubuntu-latest
         steps:
-            - name: Checkout repository
-              uses: actions/checkout@v4
-
-            - name: Setup Node.js
-              uses: actions/setup-node@v4
+            - uses: actions/checkout@v4
+            - uses: actions/setup-node@v4
               with:
-                  node-version: "16"
+                  node-version: 16
+            - run: npm i
 
-            - name: Install dependencies
-              run: npm ci # Install your dependencies
-
-            - name: Build package
-              run: npm run build # Build your package if necessary (optional step)
+    build:
+        runs-on: ubuntu-latest
+        needs: init
+        steps:
+            - uses: actions/checkout@v4
+            - uses: actions/setup-node@v4
+              with:
+                  node-version: 16
+            - run: npm ci
+            - run: npm run build # Assuming "build" is a script in your package.json
 
     publish-gpr:
         needs: build
         runs-on: ubuntu-latest
         permissions:
-            packages: write # Permission to publish to GitHub Packages
-            contents: read # Permission to read from repository
+            packages: write
+            contents: read
         steps:
-            - name: Checkout repository
-              uses: actions/checkout@v4
-
-            - name: Setup Node.js
-              uses: actions/setup-node@v4
+            - uses: actions/checkout@v4
+            - uses: actions/setup-node@v4
               with:
-                  node-version: "16"
-                  registry-url: https://npm.pkg.github.com/ # Set GitHub Packages registry
-
-            - name: Install dependencies
-              run: npm ci
-
-            - name: Publish to GitHub Packages
-              run: npm publish --access public # Publish to GitHub Packages (Scoped)
+                  node-version: 16
+                  registry-url: https://npm.pkg.github.com/
+            - run: npm ci
+            - run: npm publish
               env:
-                  NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }} # Authenticate with GitHub token
+                  NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
