--- a/.github/workflows/release-package.yml
+++ b/.github/workflows/release-package.yml
@@ -25,6 +25,16 @@ jobs:
             - run: npm ci
             - run: npm run build # Assuming "build" is a script in your package.json
 
+    change-file:
+        runs-on: ubuntu-latest
+        needs: build
+        steps:
+            - uses: actions/checkout@v4
+            - uses: actions/setup-node@v4
+              with:
+                  node-version: 16
+            - run: npm run chfile
+
     publish-gpr:
         needs: build
         runs-on: ubuntu-latest
