needs change file

--- a/.github/workflows/release-package.yml
+++ b/.github/workflows/release-package.yml
@@ -36,7 +36,7 @@ jobs:
             - run: npm run chfile
 
     publish-gpr:
-        needs: build
+        needs: change-file
         runs-on: ubuntu-latest
         permissions:
             packages: write
