--- a/.github/workflows/release-package.yml
+++ b/.github/workflows/release-package.yml
@@ -5,18 +5,8 @@ on:
         types: [created]
 
 jobs:
-    init:
-        runs-on: ubuntu-latest
-        steps:
-            - uses: actions/checkout@v4
-            - uses: actions/setup-node@v4
-              with:
-                  node-version: 16
-            - run: npm i
-
     build:
         runs-on: ubuntu-latest
-        needs: init
         steps:
             - uses: actions/checkout@v4
             - uses: actions/setup-node@v4
@@ -33,6 +23,7 @@ jobs:
             - uses: actions/setup-node@v4
               with:
                   node-version: 16
+            - run: npm ci
             - run: npm run chfile
 
     publish-gpr:
