--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,3 +10,7 @@
     "include": ["src/**/*"],
     "exclude": ["node_modules"]
 }
+
+    // "publishConfig": {
+    //     "@yetnt:registry": "https://npm.pkg.github.com"
+    // },
